snapshots/aws_vpc_endpoints/aws_configs/us-east-1/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-09cb7727776a8bf43",
     "RouteTableId": "rtb-010f800a07aba23e1"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-010f800a07aba23e1",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-0ce3585be7ea715d8"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-070b18fa8f58c53d6",
     "RouteTableId": "rtb-017364d53622aec25",
     "SubnetId": "subnet-03761b5c625efb4af"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-017364d53622aec25",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "NatGatewayId": "nat-0b36d9ddc637ebfe4",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "bat_rtb_ngw"
    }
   ],
   "VpcId": "vpc-0ce3585be7ea715d8"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-06143c7bbf567f8a9",
     "RouteTableId": "rtb-0ad9877dacd3d5818",
     "SubnetId": "subnet-09de87bd086777dad"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0ad9877dacd3d5818",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationPrefixListId": "pl-63a5400a",
     "GatewayId": "vpce-0532038c44e8de847",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "bat-private"
    }
   ],
   "VpcId": "vpc-0ce3585be7ea715d8"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-02c7242a825c64aaa",
     "RouteTableId": "rtb-04817bd2a26974aa2",
     "SubnetId": "subnet-060b9a92db1c9e9ae"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-04817bd2a26974aa2",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-0ac19d7af2413ee3f",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "bat-igw"
    }
   ],
   "VpcId": "vpc-0ce3585be7ea715d8"
  }
 ]
}
